testdata/baselines/reference/submodule/conformance/typedefCrossModule5.errors.txt
[96mmod1.js[0m:[93m2[0m:[93m7[0m - [91merror[0m[90m TS2451: [0mCannot redeclare block-scoped variable 'Bar'.

[7m2[0m class Bar {}
[7m [0m [91m      ~~~[0m

  [96mmod2.js[0m:[93m2[0m:[93m7[0m - 'Bar' was also declared here.
    [7m2[0m const Bar = 3;
    [7m [0m [96m      ~~~[0m

[96mmod2.js[0m:[93m2[0m:[93m7[0m - [91merror[0m[90m TS2451: [0mCannot redeclare block-scoped variable 'Bar'.

[7m2[0m const Bar = 3;
[7m [0m [91m      ~~~[0m

  [96mmod1.js[0m:[93m2[0m:[93m7[0m - 'Bar' was also declared here.
    [7m2[0m class Bar {}
    [7m [0m [96m      ~~~[0m


==== mod1.js (1 errors) ====
    /** @typedef {number} Foo */
    class Bar {}
          ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'Bar'.
!!! related TS6203 mod2.js:2:7: 'Bar' was also declared here.
    
==== mod2.js (1 errors) ====
    class Foo { } // should error
    const Bar = 3;
          ~~~
!!! error TS2451: Cannot redeclare block-scoped variable 'Bar'.
!!! related TS6203 mod1.js:2:7: 'Bar' was also declared here.
    
Found 2 errors in 2 files.

Errors  Files
     1  mod1.js[90m:2[0m
     1  mod2.js[90m:2[0m

